Fix action button z-index Add a slight blur when drawer is opened

--- a/public/theme/css/form.css
+++ b/public/theme/css/form.css
@@ -391,7 +391,7 @@ input[type=button].flat:focus {
     line-height: 7rem;
     height: 7rem;
     width: 7rem;
-    z-index: 1;
+    z-index: 2;
     font-size: 3.5rem;
     animation: zoom 0.3s;
     padding: 0;
